--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="/components/navBar/navBar.js"></script>
   </head>
   <body>
     <nav-bar></nav-bar>
-    <script src="./navbar.js"></script>
   </body>
 </html>
