--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -7,21 +7,14 @@
     <title>Document</title>
     <script src="/components/navBar/navBar.js"></script>
     <script src="/components/searchCard/searchCard.js"></script>
-    <script src="./search.js"></script>
+    <script defer src="./search.js"></script>
+    <link rel="stylesheet" href="/components/searchCard/searchCard.css" />
+    <link rel="stylesheet" href="./search.css" />
   </head>
-  <body
-    style="
-      margin-top: 100px;
-      max-width: 1200px;
-      padding-left: 50px;
-      padding-right: 50px;
-      margin-left: auto;
-      margin-right: auto;
-    "
-  >
+  <body>
     <nav-bar></nav-bar>
-    <div style="display: flex; flex-direction: row; flex-wrap: wrap">
-      <div style="min-width: 300px; margin-right: 20px; flex: 1">
+    <div class="page-content">
+      <article class="filter-container">
         <h3>Filter Results</h3>
         <form>
           <fieldset name="genre">
@@ -60,13 +53,11 @@
             />Birds<br />
           </fieldset>
         </form>
-      </div>
-      <div style="flex: 2; min-width: 500px">
+      </article>
+      <article class="search-container">
         <h3>Search Results</h3>
-        <search-card title=""></search-card>
-        <search-card title=""></search-card>
-        <search-card title=""></search-card>
-      </div>
+        <div id="search-result-content"></div>
+      </article>
     </div>
   </body>
 </html>
