--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -5,54 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    
     <script src="/components/navBar/navBar.js"></script>
-    <script src="/components/searchCard/searchCard.js"></script>
-    <script defer src="./search.js"></script>
-    <link rel="stylesheet" href="/components/searchCard/searchCard.css" />
+
+    <script defer type="module" src="./search.js"></script>
+
     <link rel="stylesheet" href="./search.css" />
+    <link rel="stylesheet" href="./autocompleteField.css" />
   </head>
   <body>
     <nav-bar></nav-bar>
     <div class="page-content">
       <article class="filter-container">
-        <h3>Filter Results</h3>
-        <form>
-          <fieldset name="genre">
-            <legend>Genre</legend>
-            <input type="checkbox" name="favorite_pet" value="Cats" />Cats<br />
-            <input type="checkbox" name="favorite_pet" value="Dogs" />Dogs<br />
-            <input
-              type="checkbox"
-              name="favorite_pet"
-              value="Birds"
-            />Birds<br />
-          </fieldset>
+        <section>
+          <fieldset name="Filter">
+            <legend>Filters</legend>
+            <section class="autocomplete">
+              <input
+                id="genreInput"
+                type="text"
+                name="genre"
+                placeholder="Genre"
+              />
+            </section>
 
-          <!-- Author -->
+            <section class="autocomplete">
+              <input
+                id="authorInput"
+                type="text"
+                name="author"
+                placeholder="Author"
+              />
+            </section>
 
-          <fieldset name="Author">
-            <legend>Author</legend>
-            <input type="checkbox" name="favorite_pet" value="Cats" />Cats<br />
-            <input type="checkbox" name="favorite_pet" value="Dogs" />Dogs<br />
-            <input
-              type="checkbox"
-              name="favorite_pet"
-              value="Birds"
-            />Birds<br />
-          </fieldset>
-
-          <!-- Publisher -->
-          <fieldset name="Publisher">
-            <legend>Publisher</legend>
-            <input type="checkbox" name="favorite_pet" value="Cats" />Cats<br />
-            <input type="checkbox" name="favorite_pet" value="Dogs" />Dogs<br />
-            <input
-              type="checkbox"
-              name="favorite_pet"
-              value="Birds"
-            />Birds<br />
-          </fieldset>
-        </form>
+            <section class="autocomplete">
+              <input
+                id="publisherInput"
+                type="text"
+                name="publisher"
+                placeholder="Publisher"
+              />
+            </section>
+            <button id='applyFiltersButton'>Apply Filters</button>
+   
+          </section>
       </article>
       <article class="search-container">
         <h3>Search Results</h3>
