--- a/public/pages/profile/index.html
+++ b/public/pages/profile/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
     <script src="../../js/navBar.js"></script>
+    <link href="../../css/variables.css" type="text/css" rel="stylesheet">
     <link href="../../css/profilePage.css" type="text/css" rel="stylesheet">
 
   </head>
