Replaced divs, fixed styling

--- a/public/pages/search/index.html
+++ b/public/pages/search/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav-bar></nav-bar>
-    <div class="page-content">
+    <section class="page-content">
       <article class="filter-container">
         <section>
           <fieldset name="Filter">
@@ -52,8 +52,8 @@
       </article>
       <article class="search-container">
         <h3>Search Results</h3>
-        <div id="search-result-content"></div>
+        <article id="search-result-content"></article>
       </article>
-    </div>
+    </section>
   </body>
 </html>
