--- a/public/pages/search/index.html
+++ b/public/pages/search/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
     
     <script src="../../js/navBar.js"></script>
-
     <script defer type="module" src="../../js/search.js"></script>
 
     <link rel="stylesheet" href="../../css/search.css" />
     <link rel="stylesheet" href="../../css/autocompleteField.css" />
+    <link href="../../css/variables.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <nav-bar></nav-bar>
