--- a/public/pages/wishlist/index.html
+++ b/public/pages/wishlist/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wish List</title>
     <script src="../../js/navBar.js"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <nav-bar></nav-bar>
-  </body>
+</body>
+
 </html>
