styling book details and profile page

--- a/public/pages/search/index.html
+++ b/public/pages/search/index.html
@@ -11,11 +11,11 @@
 
     <link rel="stylesheet" href="../../css/search.css" />
     <link rel="stylesheet" href="../../css/autocompleteField.css" />
-    <link href="../../css/variables.css" type="text/css" rel="stylesheet">
+
   </head>
   <body>
     <nav-bar></nav-bar>
-    <section class="page-content">
+    <div class="page-content">
       <article class="filter-container">
         <section>
           <fieldset name="Filter">
@@ -52,8 +52,8 @@
       </article>
       <article class="search-container">
         <h3>Search Results</h3>
-        <article id="search-result-content"></article>
+        <div id="search-result-content"></div>
       </article>
-    </section>
+    </div>
   </body>
 </html>
