--- a/public/pages/bookDetails/index.html
+++ b/public/pages/bookDetails/index.html
@@ -4,10 +4,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Details</title>
+  <link href="../../css/variables.css" type="text/css" rel="stylesheet">
+  <link href="../../css/common.css" type="text/css" rel="stylesheet">
   <script src="../../js/navBar.js"></script>
   <script defer type="module" src="../../js/bookDetails.js"></script>
 </head>
 <body class="book-details-body">
+ 
   <nav-bar></nav-bar>
   <article class="book-details">
     <picture class="book-cover">
@@ -19,11 +22,17 @@
       />
     </picture>
     <section class="book-heading-and-description">
-      <h2 id="bookTitle">Book Title</h2>
-      <h1 id="bookAuthor">by Author McLastname</h1>
-      <section>
-        <h1 id="positiveReviews">0 Positive Reviews</h1>
-        <h1 id="negativeReviews">0 Negative Reviews</h1>
+      <h1 id="bookTitle">Book Title</h2>
+      <p id="bookAuthor">by Author McLastname</h1>
+      <section class="rating-containers">
+        <section class="rating-section">
+          <i class="far fa-thumbs-up"></i>
+          <p id="positiveReviews">0 Positive Reviews</p>
+        </section>
+        <section class="rating-section">
+          <i class="far fa-thumbs-down"></i>
+          <p id="negativeReviews">0 Negative Reviews</p>
+        </section>
       </section>
       
       <p id="bookDescription">
@@ -38,24 +47,24 @@
     </section>
   </article>
   <section>
-    <h2>Reviews</h2>
-    <h1>Write a review</h1>
+    <h3>Reviews</h3>
+    <h3>Write a review</h3>
     <form>
       <textarea class="review-text-input">
-   This book is Awesome!!! I like it because... </textarea
-      >
+        This book is Awesome!!! I like it because... 
+      </textarea>
       <section>
-        <label for="like"
-          >Like <input type="radio" value="like" name="rating"
-        /></label>
-        <label for="dislike"
-          >Dislike <input type="radio" value="dislike" name="rating"
-        /></label>
+        <label for="like">
+          Like <input type="radio" value="like" name="rating"/>
+        </label>
+        <label for="dislike">
+          Dislike <input type="radio" value="dislike" name="rating"/>
+        </label>
       </section>
 
       <button type="submit" onsubmit="return validateForm()">Post your review</button>
     </form>
-    <h1>What others are saying</h1>
+    <h3>What others are saying</h3>
     <ol>
       <li>
         <p>This book sucks</p>
@@ -71,4 +80,6 @@
       </li>
     </ol>
   </section>
+
+  <script src="https://kit.fontawesome.com/c86a392dbc.js" crossorigin="anonymous"></script>
 </body>
