--- a/public/pages/bookDetails/index.html
+++ b/public/pages/bookDetails/index.html
@@ -22,10 +22,10 @@
       <h2 id="bookTitle">Book Title</h2>
       <h1 id="bookAuthor">by Author McLastname</h1>
       <section>
-        <h1 id="positiveReviews">0 Positive Reviews</h1>
-        <h1 id="negativeReviews">0 Negative Reviews</h1>
+        <h1 id="positiveReviews">0</h1> <img class="icon" src="../../assets/images/dislike.svg" alt="Thumbs Down" />
+        <h1 id="negativeReviews">0 </h1> <img class="icon" src="../../assets/images/like.svg" alt="Thumbs Up" />
       </section>
-      
+
       <p id="bookDescription">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -53,22 +53,37 @@
         /></label>
       </section>
 
-      <button type="submit" onsubmit="return validateForm()">Post your review</button>
+      <button type="submit" onsubmit="return validateForm()">
+        Post your review
+      </button>
     </form>
     <h1>What others are saying</h1>
     <ol>
       <li>
         <p>This book sucks</p>
-        <img src="" alt="Thumbs Down" />
+        <img class="icon" src="../../assets/images/dislike.svg" alt="Thumbs Down" />
       </li>
       <li>
         <p>This book Rocks</p>
-        <img src="" alt="Thumbs Up" />
+        <img class="icon" src="" alt="Thumbs Up" />
       </li>
       <li>
         <p>This book is kinda eh</p>
-        <img src="" alt="Thumbs Up" />
+        <img class="icon" src="../../assets/images/like.svg" alt="Thumbs Up" />
       </li>
     </ol>
   </section>
 </body>
+
+<footer>
+  <div>
+    Icons made by
+    <a
+      href="https://www.flaticon.com/authors/pixel-perfect"
+      title="Pixel perfect"
+      >Pixel perfect</a
+    >
+    from
+    <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+  </div>
+</footer>
