fixed cover art not showing changed icons

--- a/public/pages/bookDetails/index.html
+++ b/public/pages/bookDetails/index.html
@@ -27,11 +27,11 @@
       <p id="bookAuthor">by Author McLastname</h1>
       <section class="rating-containers">
         <section class="rating-section">
-          <i class="far fa-thumbs-up"></i>
+          <img class="icon" src="../../assets/images/like.svg" alt="Thumbs Down" />
           <p id="positiveReviews">0 Positive Reviews</p>
         </section>
         <section class="rating-section">
-          <i class="far fa-thumbs-down"></i>
+          <img class="icon" src="../../assets/images/dislike.svg" alt="Thumbs Down" />
           <p id="negativeReviews">0 Negative Reviews</p>
         </section>
       </section>
