added more stuff on wish list page

--- a/public/pages/readList/index.html
+++ b/public/pages/readList/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav-bar></nav-bar>
-    <h1>Read</h1>
+    <h1>Read List</h1>
     <main id="read_list" class=" book-info-list ">
 
     </main>
