--- a/public/pages/wishlist/index.html
+++ b/public/pages/wishlist/index.html
@@ -7,10 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wish List</title>
     <script src="../../js/navBar.js"></script>
+    <script src="../../js/wishlist.js"></script>
+    <link rel="stylesheet" href="../../css/wishlist.css">
 </head>
 
 <body>
     <nav-bar></nav-bar>
+    <h1>Wish List</h1>
+    <main id="wish_list" class=" book-info-list ">
+
+    </main>
 </body>
 
 </html>
