added buttons to add item to wishlist/readlist

--- a/public/pages/bookDetails/index.html
+++ b/public/pages/bookDetails/index.html
@@ -45,6 +45,10 @@
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum.
       </p>
+      <section>
+        <button id="wishlistButton"> I want to read this book</button>
+        <button id="readlistButton"> I have read this book</button>
+      </section>
     </section>
   </article>
   <section>
