more styling tweaks

--- a/public/pages/profile/index.html
+++ b/public/pages/profile/index.html
@@ -7,6 +7,7 @@
     <title>Profile</title>
     <script src="../../js/navBar.js"></script>
     <link href="../../css/variables.css" type="text/css" rel="stylesheet">
+    <link href="../../css/common.css" type="text/css" rel="stylesheet">
     <link href="../../css/profilePage.css" type="text/css" rel="stylesheet">
   </head>
   <body>
