--- a/public/pages/wishlist/index.html
+++ b/public/pages/wishlist/index.html
@@ -9,6 +9,7 @@
     <script src="../../js/navBar.js"></script>
     <script src="../../js/wishlist.js"></script>
     <link rel="stylesheet" href="../../css/wishlist.css">
+    <link rel="stylesheet" href="../../css/common.css">
 </head>
 
 <body>
