added local auth

--- a/private_pages/profile.html
+++ b/private_pages/profile.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
-    <script src="../../js/navBar.js"></script>
-    <link href="../../css/variables.css" type="text/css" rel="stylesheet">
-    <link href="../../css/profilePage.css" type="text/css" rel="stylesheet">
+    <script src="../js/navBar.js"></script>
+    <link href="../css/variables.css" type="text/css" rel="stylesheet">
+    <link href="../css/profilePage.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <nav-bar></nav-bar>
