--- a/private_pages/wishlist.html
+++ b/private_pages/wishlist.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Read List</title>
-    <script src="../../js/navBar.js"></script>
-    <script src="../../js/readlist.js"></script>
-    <link rel="stylesheet" href="../../css/readlist.css">
+    <title>Wish List</title>
+    <script src="../js/navBar.js"></script>
+    <script src="../../js/wishlist.js"></script>
+    <link rel="stylesheet" href="../css/wishlist.css">
 </head>
 
 <body>
     <nav-bar></nav-bar>
-    <h1>Read List</h1>
-    <main id="read_list" class=" book-info-list ">
+    <h1>Wish List</h1>
+    <main id="wish_list" class=" book-info-list ">
 
     </main>
 </body>
