--- a/public/pages/readList/index.html
+++ b/public/pages/readList/index.html
@@ -8,7 +8,9 @@
     <title>Read List</title>
     <script src="../../js/navBar.js"></script>
     <script src="../../js/readlist.js"></script>
-    <link rel="stylesheet" href="../../css/readlist.css">
+    <link rel="stylesheet" type="text/css" href="../../css/common.css">
+    <link href="../../css/variables.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../../css/readlist.css">
 </head>
 
 <body>
