--- a/public/pages/wishlist/index.html
+++ b/public/pages/wishlist/index.html
@@ -8,8 +8,9 @@
     <title>Wish List</title>
     <script src="../../js/navBar.js"></script>
     <script src="../../js/wishlist.js"></script>
-    <link rel="stylesheet" href="../../css/wishlist.css">
-    <link rel="stylesheet" href="../../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../../css/common.css">
+    <link href="../../css/variables.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../../css/wishlist.css">
 </head>
 
 <body>
