--- a/public/pages/browse/index.html
+++ b/public/pages/browse/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Book Browser</title>
     <script src="../../js/navBar.js"></script>
-  </head>
-  <body>
+    <script src="../../js/browseBooks.js"></script>
+    <link rel="stylesheet" href="../../css/browseBooks.css">
+</head>
+
+<body>
     <nav-bar></nav-bar>
-  </body>
+    <h1>Browse Books</h1>
+    <main id="book_browser" class=" book-info-list ">
+
+    </main>
+</body>
+
 </html>
