--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gooder Reads</title>
     <script src="../js/navBar.js"></script>
+    <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
     <nav-bar></nav-bar>
