--- a/public/pages/browse/index.html
+++ b/public/pages/browse/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Browser</title>
     <script src="../../js/navBar.js"></script>
     <script src="../../js/browseBooks.js"></script>
-    <link rel="stylesheet" href="../../css/browseBooks.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="../../css/common.css" />
+    <link href="../../css/variables.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="../../css/readlist.css" />
+  </head>
 
-<body>
+  <body>
     <nav-bar></nav-bar>
     <h1>Browse Books</h1>
-    <main id="book_browser" class=" book-info-list ">
-
-    </main>
-</body>
-
+    <main id="book_browser" class="book-info-list"></main>
+  </body>
 </html>
