Added functionality for liking and disliking books

--- a/public/pages/bookDetails/index.html
+++ b/public/pages/bookDetails/index.html
@@ -61,10 +61,10 @@ This book is Awesome!!! I like it because...
       </textarea>
       <section>
         <label for="like">
-          Like <input type="radio" value="like" name="rating" checked/>
+          Like <input type="radio" value="like" name="rating" checked id="like-radio"/>
         </label>
         <label for="dislike">
-          Dislike <input type="radio" value="dislike" name="rating"/>
+          Dislike <input type="radio" value="dislike" name="rating" id="dislike-radio"/>
         </label>
       </section>
 
