Fix search styling

--- a/public/pages/bookDetails/index.html
+++ b/public/pages/bookDetails/index.html
@@ -79,7 +79,7 @@ This book is Awesome!!! I like it because...
 </body>
 
 <footer>
-  <div>
+  <nav>
     Icons made by
     <a
       href="https://www.flaticon.com/authors/pixel-perfect"
@@ -88,5 +88,5 @@ This book is Awesome!!! I like it because...
     >
     from
     <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-  </div>
+  </nav>
 </footer>
