--- a/public/pages/search/index.html
+++ b/public/pages/search/index.html
@@ -8,14 +8,14 @@
     
     <script src="../../js/navBar.js"></script>
     <script defer type="module" src="../../js/search.js"></script>
-
+    <link href="../../css/variables.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="../../css/search.css" />
     <link rel="stylesheet" href="../../css/autocompleteField.css" />
 
   </head>
   <body>
     <nav-bar></nav-bar>
-    <div class="page-content">
+    <section class="page-content">
       <article class="filter-container">
         <section>
           <fieldset name="Filter">
@@ -52,8 +52,8 @@
       </article>
       <article class="search-container">
         <h3>Search Results</h3>
-        <div id="search-result-content"></div>
+        <article id="search-result-content"></article>
       </article>
-    </div>
+    </section>
   </body>
 </html>
