new browse layou

--- a/public/pages/browse/index.html
+++ b/public/pages/browse/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" type="text/css" href="../../css/common.css" />
     <link href="../../css/variables.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../css/readlist.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/browseBooks.css" />
   </head>
 
   <body>
     <nav-bar></nav-bar>
     <h1>Browse Books</h1>
-    <main id="book_browser" class="book-info-list"></main>
+    <main id="book_browser" class="row"></main>
   </body>
 </html>
